--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -4,19 +4,31 @@
   <meta charset="<% settings.charset %>">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
   <title><% title %></title>
-  <link rel="stylesheet" href="<% request.uri_base %>/css/style.css">
+
+
+  <link rel="stylesheet" href="/css/bootstrap.min.css">
+
+
+
 
 <!-- Grab jQuery from a CDN, fall back to local if necessary -->
+
 <script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
 <script type="text/javascript">/* <![CDATA[ */
     !window.jQuery && document.write('<script type="text/javascript" src="<% request.uri_base %>/javascripts/jquery.js"><\/script>')
 /* ]]> */</script>
 
+<script src="/js/bootstrap.min.js"></script>
+
+
+
+
 </head>
 <body>
+
+<% INCLUDE 'layouts/_navbar.tt' %>
 <% content %>
-<div id="footer">
-Powered by <a href="http://perldancer.org/">Dancer2</a> <% dancer_version %>
-</div>
+<% INCLUDE 'layouts/_footer.tt' %>
+
 </body>
 </html>
