--- a/views/layouts/_navbar.tt
+++ b/views/layouts/_navbar.tt
@@ -1,4 +1,5 @@
-<nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+
+<nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse">
   <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
