--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="<% settings.charset %>">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-  <title><% title %></title>
 
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+ 	
+	 <title><% title %></title>
 
-  <link rel="stylesheet" href="/css/bootstrap.min.css">
+	    <!-- Bootstrap CSS -->
+	  <link rel="stylesheet" href="/css/bootstrap.min.css">
 
 
 
 
 <!-- Grab jQuery from a CDN, fall back to local if necessary -->
-
-<script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
-<script type="text/javascript">/* <![CDATA[ */
-    !window.jQuery && document.write('<script type="text/javascript" src="<% request.uri_base %>/javascripts/jquery.js"><\/script>')
-/* ]]> */</script>
-
+<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
 <script src="/js/bootstrap.min.js"></script>
 
 
@@ -27,7 +26,30 @@
 <body>
 
 <% INCLUDE 'layouts/_navbar.tt' %>
+
+<div class="container-fluid">
+  			<div class="page-header">
+    		<h5><a href="/">Home</a></h5>   
+            
+            
+             <div class="row">
+             	<div class="col-2"></div>
+                <div class="col-4"><h1>Home</h1></div>
+			</div>
+<div class="row">
+	<div class="col-2"></div>
+		<div class="col-9">
+				<div class="container-fluid">
+						<div class="jumbotron">
+
 <% content %>
+
+</div>
+				</div>
+		</div>
+	</div>
+</div>
+
 <% INCLUDE 'layouts/_footer.tt' %>
 
 </body>
