--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -15,8 +15,8 @@
 
 
 <!-- Grab jQuery from a CDN, fall back to local if necessary -->
-<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+<script src="/jquery-3.1.1.slim.min.js"></script>
+<script src="/js/tether.min.js"></script>
 <script src="/js/bootstrap.min.js"></script>
 
 
@@ -32,13 +32,10 @@
     		<h5><a href="/">Home</a></h5>   
             
             
-             <div class="row">
-             	<div class="col-2"></div>
-                <div class="col-4"><h1>Home</h1></div>
-			</div>
+       
 <div class="row">
-	<div class="col-2"></div>
-		<div class="col-9">
+	<div class="col-1"></div>
+		<div class="col-10">
 				<div class="container-fluid">
 						<div class="jumbotron">
 
