--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -15,7 +15,7 @@
 
 
 <!-- Grab jQuery from a CDN, fall back to local if necessary -->
-<script src="/jquery-3.1.1.slim.min.js"></script>
+<script src="/js/jquery-3.1.1.slim.min.js"></script>
 <script src="/js/tether.min.js"></script>
 <script src="/js/bootstrap.min.js"></script>
 
@@ -29,7 +29,7 @@
 
 <div class="container-fluid">
   			<div class="page-header">
-    		<h5><a href="/">Home</a></h5>   
+    		<h6><a href="/">Home</a></h6>   
             
             
        
