--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -8,17 +8,15 @@
  	
 	 <title><% title %></title>
 
-	    <!-- Bootstrap CSS -->
+	    <!-- Bootstrap CSS 
 	  <link rel="stylesheet" href="/css/bootstrap.min.css">
+	 <link rel="stylesheet" href="/css/style.css"-->
 
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
 
-
-
-<!-- Grab jQuery from a CDN, fall back to local if necessary -->
-<script src="/js/jquery-3.1.1.slim.min.js"></script>
-<script src="/js/tether.min.js"></script>
-<script src="/js/bootstrap.min.js"></script>
-
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 
 
 
@@ -27,10 +25,22 @@
 
 <% INCLUDE 'layouts/_navbar.tt' %>
 
+
+
+<div class="card card-inverse" style="background-color: #333; border-color: #333;">
+  <div class="card-block">
+    <h3 class="card-title">Special title treatment</h3>
+    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+</div>
+
+
 <div class="container-fluid">
   			<div class="page-header">
     		<h6><a href="/">Home</a></h6>   
             
+<hr>
             
        
 <div class="row">
