add users section

--- a/views/index.tt
+++ b/views/index.tt
@@ -1,71 +1,71 @@
-        <div class="container">
-        <form class="form-horizontal" role="form" method="POST" action="/login">
-            <div class="row">
-                <div class="col-md-3"></div>
-                <div class="col-md-6">
-                    <h2>Please Login</h2>
-                    <hr>
-                </div>
+<% vars.title = 'Home' %>
+                           
+<div class="left-container" id="left-container">
+<div class="container">
+<div>
+<h1></h1>
+</div>
+  <div class="container-fluid">
+
+<h1></h1>
+
             </div>
-            <div class="row">
-                <div class="col-md-3"></div>
-                <div class="col-md-6">
-                    <div class="form-group has-danger">
-                        <label class="sr-only" for="email">E-Mail Address</label>
-                        <div class="input-group mb-2 mr-sm-2 mb-sm-0">
-                            <div class="input-group-addon" style="width: 2.6rem"><i class="fa fa-at"></i></div>
-                            <input type="text" name="email" class="form-control" id="email"
-                                   placeholder="you@example.com" required autofocus>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="form-control-feedback">
-                        <span class="text-danger align-middle">
-                            <i class="fa fa-close"></i> Example error message
-                        </span>
-                    </div>
-                </div>
+
+  <div class="container-fluid">
+     
+
             </div>
-            <div class="row">
-                <div class="col-md-3"></div>
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <label class="sr-only" for="password">Password</label>
-                        <div class="input-group mb-2 mr-sm-2 mb-sm-0">
-                            <div class="input-group-addon" style="width: 2.6rem"><i class="fa fa-key"></i></div>
-                            <input type="password" name="password" class="form-control" id="password"
-                                   placeholder="Password" required>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="form-control-feedback">
-                        <span class="text-danger align-middle">
-                        <!-- Put password error message here -->    
-                        </span>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-3"></div>
-                <div class="col-md-6" style="padding-top: .35rem">
-                    <div class="form-check mb-2 mr-sm-2 mb-sm-0">
-                        <label class="form-check-label">
-                            <input class="form-check-input" name="remember"
-                                   type="checkbox" >
-                            <span style="padding-bottom: .15rem">Remember me</span>
-                        </label>
-                    </div>
-                </div>
-            </div>
-            <div class="row" style="padding-top: 1rem">
-                <div class="col-md-3"></div>
-                <div class="col-md-6">
-                    <button type="submit" class="btn btn-success"><i class="fa fa-sign-in"></i> Login</button>
-                    <a class="btn btn-link" href="/password/reset">Forgot Your Password?</a>
-                </div>
-            </div>
-        </form>
+
+
+
+
+        	    
+    <% if current_user %>
+
+
+
+<div class="container">
+<div class="jumbotron">
+
+ 
+<p>Bonjour <%current_user.username %></p>
+
+
+</div>
+</div>
+
+<div class="container">
+<div class="jumbotron">
+
+<p>Vos Reservations<p>
+
+</div>
+</div>
+
+
+               <div class = "container">
+      <div class = "jumbotron">
+        <center><h1>Jumbotron Title</h1>
+        <p>Jumbotron text</p>
+        <a href = "#" class = "btn btn-info btn-lg">Button</a>
+        <a href = "#" class = "btn btn-success btn-lg">Button 2</a>
+        </center>
+      </div>
     </div>
+
+      <% ELSE %>
+
+<div class="container">
+<div class="jumbotron">
+
+
+<p><a class="btn btn-lg btn-primary" href="/signup" role="button">Sign up now! &raquo;</a> </p>
+
+</div>
+</div>
+	
+<% END %>
+
+</div>
+
 
