--- a/views/layouts/_navbar.tt
+++ b/views/layouts/_navbar.tt
@@ -14,7 +14,7 @@
 
           <ul class="nav navbar-nav navbar-left">
                     <li><a href="/">Home</a></li>
-                    <% if current_user %>
+                    <% if session.logged_in_user %>
               <li><a href="/users">Users</a></li>
               <li><a href="/reservations">Reservation</a></li>
 
@@ -28,14 +28,14 @@
 
 
 	 <ul class="nav navbar-nav navbar-right">
-                 <% if current_user %>
+                 <% if session.logged_in_user %>
               <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><% current_user.username %><span class="caret"></span></a>
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><% session.logged_in_user %><span class="caret"></span></a>
                 <ul class="dropdown-menu" role="menu">
-                  <li><a href="/users/<% current_user.id %>">Profile</a></li>
-                  <li><a href="/users/<% current_user.id %>/edit">Settings</a></li>
+                  <li><a href="/users/<% user.id %>">Profile</a></li>
+                  <li><a href="/users/<% user.id %>/edit">Settings</a></li>
                   <li class="divider"></li>
-                  <li><a href="/signout" rel="nofollow">Sign out</a></li>
+                  <li><a href="/logout" rel="nofollow">Sign out</a></li>
                 </ul>
               </li>
             <% else %>
